[package]
name = "rapira-derive"
version = "0.1.0"
authors = ["Rail Khusnutdinov <rail@33.run>"]
keywords = ["serialization"]
categories = []
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/rapira/"
documentation = "https://docs.rs/rapira/"
repository = "https://github.com/libfunc/rapira/"
readme = "../README.md"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1", features = ["full"] }
