[package]
name = "rapira"
description = "serialization library like borsh, bincode and speedy"
version = "0.4.0"
authors = ["Rail Khusnutdinov <rail@33.run>"]
keywords = ["serialization"]
categories = []
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libfunc/rapira/"
documentation = "https://docs.rs/rapira/"
repository = "https://github.com/libfunc/rapira/"
readme = "../README.md"
edition = "2021"

[lib]
name = "rapira"
path = "src/lib.rs"

[features]
default = [
    "zerocopy",
    "std",
    "json",
    "arrayvec",
    "smallvec",
    "decimal",
    "compact_str",
    "bytes",
]
# default = ["zerocopy", "std"]
# default = ["zerocopy", "alloc"]
# default = ["zerocopy"]
# default = ["no_std"]
no_std = []
alloc = []
std = ["thiserror", "alloc", "simdutf8/std"]
json = ["serde_json/alloc"]
decimal = ["rust_decimal"]

[dependencies.rapira-derive]
version = "0.2.3"
# path = "../rapira-derive"

[dependencies]
thiserror = { version = "1.0", optional = true }
hashbrown = { version = "0.13", optional = true }
rustc-hash = { version = "1.1", optional = true, default-features = false }
zerocopy = { version = "0.6.1", optional = true, features = ["simd"] }
serde_json = { version = "1.0", optional = true, default-features = false }
indexmap = { version = "1.9", optional = true, default-features = false }
arrayvec = { version = "0.7", optional = true }
smallvec = { version = "1.8", optional = true, features = [
    "union",
    "const_generics",
    "const_new",
] }
rust_decimal = { version = "1.27", optional = true }
time = { version = "0.3", default-features = false }
compact_str = { version = "0.7", optional = true }
bytes = { version = "1.4", optional = true }

[target.'cfg(not(target_env = "aarch64-apple-darwin"))'.dependencies]
simdutf8 = { version = "0.1", default-features = false }

[target.'cfg(target_env = "aarch64-apple-darwin")'.dependencies]
simdutf8 = { version = "0.1", features = ["aarch64_neon"] }

[dev-dependencies]
byteorder = "1.4"
